test_scores/negative_dimers/features/Q5VSY0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5VSY0.pkl.xz